--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,17 @@
 {
   "compilerOptions": {
-    "module": "CommonJS",
+    "target": "ES2020", // Compatible with GraalVM
+    "module": "ESNext", // Or "CommonJS" depending on game engine
+    "lib": ["ES2020"],
+    "strict": false,
     "removeComments": false,
-    "target": "ES2022",
-    "lib": ["ES2022"],
-    "outDir": "./build",
-    "skipLibCheck": true,
-    "typeRoots": []
+    "esModuleInterop": true,
+    "outDir": "Macros", // Output JS into the Macros folder
+    "rootDir": "src", // Your macro source files
+    "moduleResolution": "node",
+    "allowJs": true,
+    "skipLibCheck": true
   },
-  "include": ["scripts/**/*.ts", "scripts/**/*.js", "headers/*.d.ts"],
-  "exclude": ["build/*"],
-  "outDir": "./build",
-  "skipLibCheck": true
+  "include": ["src", "headers"],
+  "exclude": ["Macros"]
 }
